# polypart

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
benchmarks/: entropy.ipynb  sampling.ipynb  summary_plot.ipynb  timings.ipynb
benchmarks/config/: moduli_n1.py  moduli_r2.py  random.py
data/: moduli_n1_r5.json  moduli_n1_r6.json  moduli_n1_r7.json  square_partitions.json
data/tree/: tree_n1_r6.json  tree_n1_r7.json  tree_n3_r2.json
examples/: Moduli_Stability_Chambers.ipynb  Partitioning_Unit_Square.ipynb  moduli.py  square.py
experiments/: entropy.ipynb  experiments.py  inc_enu.ipynb  jubound.py  jubound_tree.json  moduli.py  parallel_runner.py  sampling.ipynb  summary_plot.ipynb  timings.ipynb  trivial.py
experiments/config/: random_lowrank.py
notebooks/: entropy.ipynb  report.ipynb  sampling.ipynb  timings.ipynb
polypart/: __init__.py  arrangements.py  delres.py  ftyping.py  geometry.py  inc_enu.py  io.py  lp_backends.py  moduli.py  polytopes.py  ppart.py  utils.py  volume.py
polypart/experiments/: __init__.py  __main__.py  cli_batch.py  cli_single.py  core.py  parallel.py  plots.py  report.py  runner.py
polypart/experiments/config/: braid.py  moduli_n1_random.py  moduli_r2_random.py  random_lowdim.py
src/: geometry.py  performance.py  polycha_inefficient.py  prueba.py  prueba_pypo copy.py  prueba_pypo.py  tree.py  utils.py
tests/: test_hyperplane_init.py  test_io_roundtrip.py  test_lp_backends.py  test_random_polytope.py  test_square_partition.py
