[project]
name = "polypart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sergio Herreros Pérez", email = "sergioherrerosp@gmail.com" },
    { name = "David Alfaya Sánchez", email = "dalfaya@icai.comillas.edu"},
    { name = "Jaime Pizarroso Gonzalo", email = "jpizarroso@comillas.edu"} 
]
dependencies = [
    "matplotlib==3.6.0",
    "numpy==1.24.4",
    "pycddlib==3.0.2",
    "tqdm==4.67.1",
]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "polypart"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true