[project]
name = "polypart"
version = "0.1.5"
description = "Robust convex polytope partitioning with exact arithmetic and efficient point classification."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sergio Herreros Pérez", email = "sergioherrerosp@gmail.com" },
    { name = "David Alfaya Sánchez", email = "dalfaya@icai.comillas.edu"},
    { name = "Jaime Pizarroso Gonzalo", email = "jpizarroso@comillas.edu"} 
]
dependencies = [
    "numpy>=1.24.4",
    "pycddlib>=3.0.2",
]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "polypart"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

# pyproject.toml
[tool.setuptools.packages.find]
include = ["polypart*"]
exclude = ["tests*", "examples*", "data*", "images*"]